--- a/style.css
+++ b/style.css
@@ -1,10 +1,61 @@
+.hero-slider__wrapper {
+  position: relative;
+  width: 100%;
+  height: 461px;
+  background-image: url(images/poster.png);
+  background-repeat: no-repeat;
+  background-position: 445px 0px;
+}
+
+.hero-slider__wrapper::before {
+  content: "";
+  position: absolute;
+  height: 90%;
+  width: 100%;
+  top: 10%;
+  background-color: #EEE4DB;
+  z-index: -10;
+}
+
+.hero-slider__inner {
+  position: absolute;
+  top: 106px;
+  left: 28px;
+  width: 50%;
+ 
+  display: flex;
+  flex-wrap: wrap;
+  
+}
+
 .hero-slider__number {
   font-family: 'Montserrat', sans-serif;
   font-weight: 300;
   font-size: 60px;
   line-height: 73px;
+
+  width: 80px;
+  flex-basis: 100%;
+  margin: 0;
+  
   
   color: rgba(30, 6, 6, 0.05);
+}
+
+.hero-slider__nav {
+  margin: 0;
+  padding-right: 71px;
+  padding-left: 3px;
+}
+
+.hero-slider__content {
+  max-width: 310px;
+  padding-left: 10;
+  padding-right: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .slider-button {
@@ -23,6 +74,7 @@
   font-weight: bold;
   font-size: 40px;
   line-height: 110%;
+  margin: 0;
 
   color: #1E0606;
 }
@@ -43,6 +95,10 @@
   line-height: 16px;
   text-align: center;
   text-transform: uppercase;
+
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: 0;
 
   color: #FFFFFF;
   background-color: #C29974;
