--- a/pages/contact-us/style.css
+++ b/pages/contact-us/style.css
@@ -1,3 +1,12 @@
+.contact-us {
+  padding-bottom: 60px;
+}
+
+.contact-us__section {
+  display: flex;
+  justify-content: space-between;
+}
+
 .contact-us__upper-text {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
@@ -8,3 +17,20 @@
   color: #C29974;
 }
 
+.contact-us__text-wrapper {
+  width: 380px;
+}
+
+.modal-window {
+  margin: 0;
+}
+
+.modal-window__input::placeholder {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
+
+  color: #1E0606;
+}
