--- a/pages/blog/style.css
+++ b/pages/blog/style.css
@@ -6,6 +6,10 @@
   color: #818181;
 }
 
+.blog {
+  padding-bottom: 60px;
+}
+
 .blog-post__title {
   font-family: '0Montserrat', sans-serif;
   font-weight: bold;
@@ -15,24 +19,21 @@
 
 .blog-post__decription {
   font-size: 18px;
-line-height: 25px;
+  line-height: 25px;
 }
 
-.pagination-btn {
-  font-family: 'Montserrat' sans-serif;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 20px;
-
-  text-transform: uppercase;
-  color: #1E0606;
+.blog-articles {
+  padding-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: -20px;
 }
 
-.pagination-btn:active {
-  color:  #C29974;
-}
+.blog-post__card {
+  display: flex;
+  flex-direction: column;
+  width: 380px;
+  padding: 20px;
 
-.pagination-btn:hover {
-  color: #1E0606;
-  opacity: 0.5;
 }
