--- a/style.css
+++ b/style.css
@@ -127,78 +127,7 @@
   margin-bottom: 30;
 }
 
-.category-list {
-  display: flex;
-  justify-content: space-between;
-  
-  flex-wrap: wrap;
 
-  margin-top: 30px;
-  margin-bottom: 0;
-}
-
-.category-list__item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  position: relative;
-  width: 280px;
-  min-height: 270px;
-}
-
-.category-product__bg-apparel {
-  background-color: #DBE4DB;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-blend-mode: multiply;
-  
-}
-
-.category-product__bg-holiday {
-  background-color: rgba(186, 142, 107, 0.3);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-blend-mode: multiply;
-}
-
-.category-product__bg-toys {
-  background-color: #F8F2DA;
-  background-image: url(images/product-3.png);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-blend-mode: multiply;
-}
-
-.category-product__bg-accessories {
-  background-color: rgba(9, 3, 79, 0.17);
-  background-image: url(images/product-4.png);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-blend-mode: multiply;
-}
-
-.category-products__text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.category-products__link {
-  width: 100%;
-  height: 100%;
-
-  font-family: 'Montserrat';
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 32px;
-  text-align: center;
-  text-transform: uppercase;
-
-  color: #FFFFFF;
-  text-shadow: 0px 0px 40px rgba(147, 3, 3, 0.25);
-}
 
 .category-description {
   display: inline-flex;
@@ -391,88 +320,11 @@
   background-color: rgba(125, 151, 218, 0.8);
   height: 100vh;
   width: 100vw;
+  display: flex;
+}
+
+.modal-window_close {
   display: none;
-}
-
-.modal-window {
-  position: relative;
-  margin: auto;
-  padding: 42px 40px;
-
-  background-color: #E5EAF8;
-  display: flex;
-  flex-direction: column;
-  width: 680px;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.label-row {
-  display: flex;
-  justify-content: space-between;
-}
-
-.label {
-  position: relative;
-  padding-top: 22px;
-  padding-bottom: 20px;
-}
-
-.modal-window__input {
-  height: 50px;
-  padding-left: 15px;
-  font-family: Roboto;
-  font-size: 14px;
-  line-height: 16px;
-
-  color: #1E0606;
-}
-
-.modal-window__message {
-  position: relative;
-  padding-top: 22px;
-  
-}
-
-.label-input__name {
-  width: 600px;
-}
-
-.label-input__phone {
-  width: 290px;
-}
-
-.label-input__email {
-  width: 290px;
-}
-
-.label-message {
-  width: 600px;
-  height: 150px;
-}
-
-.input-text {
-  position: absolute;
-  top: 0;
-  left: 0;
-  font-family: Roboto;
-  font-size: 14px;
-  line-height: 16px;
-
-  color: #1E0606;
-}
-
-.checkbox-text {
-  padding-bottom: 20px;
-  font-family: Roboto;
-  font-size: 14px;
-  line-height: 16px;
-
-  color: #1E0606;
-}
-
-.modal-window__button {
-  align-self: baseline;
 }
 
 .form-close {
