--- a/common.css
+++ b/common.css
@@ -92,6 +92,15 @@ img {
   min-width: 100px;
   min-height: 50px;
   height: 50px;
+  transition: opacity ease-in-out .5s;
+}
+
+.header-logo:hover {
+  opacity: .5;
+}
+
+.header-logo:active {
+  opacity: .2;
 }
 
 .header-nav__link-list {
@@ -106,22 +115,51 @@ img {
   align-items: center;
 }
 
-.contact-link {
-  text-shadow: 1px 0 0 #1E0606;
-  margin-left: 23.45px;
-  text-transform: uppercase;
-}
-
 .nav-link {
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   line-height: 19px;
   text-transform: uppercase;
   cursor: pointer;
-
   margin-right: 20px;
 
   color: #1E0606;
+  transition: opacity ease-in-out .5s;
+}
+
+.nav-link:hover {
+  opacity: .5;
+}
+
+.nav-link:active {
+  opacity: .2;
+}
+
+.header-nav__search {
+  transition: opacity ease-in-out .5s;
+}
+
+.header-nav__search:hover {
+  opacity: .5;
+}
+
+.header-nav__search:active {
+  opacity: .2;
+}
+
+.contact-link {
+  text-shadow: 1px 0 0 #1E0606;
+  margin-left: 23.45px;
+  text-transform: uppercase;
+  transition: opacity ease-in-out .5s;
+}
+
+.contact-link:hover {
+  opacity: .5;
+}
+
+.contact-link:active {
+  opacity: .2;
 }
 
 /* footer */
@@ -232,6 +270,20 @@ footer {
   background-color: #1E0606;
   padding: 9px 22px;
   cursor: pointer;
+  transition: background-color ease-in-out .6s;
+}
+
+.button:hover {
+  background-color: #C29974;;
+}
+
+.button:active {
+  background-color: #CFAF91;;
+}
+
+.button:disabled {
+  color: #E1E1E1;
+  background-color: #C1C1C1;;
 }
 
 .footer-form {
@@ -248,7 +300,6 @@ footer {
   height: 40px;
   width: 298px;
   padding: 9px 15px;
-
 }
 
 .footer-input::placeholder {
@@ -323,45 +374,12 @@ opacity: 0.5;
   color: #1E0606;
 }
 
-/* hover */
-
-.nav-link:hover {
-  text-shadow: 1px 0 0 #1E0606
-}
-
-.button:hover {
-  background-color: #C29974;;
-}
-
-/* active */
-
-.nav-link:active {
-  font-weight: bold;
-}
-
-.contact-link:hover {
-  font-weight: 400;
-}
-
-.button:active {
-  background-color: #CFAF91;;
-}
-
-/* disabled */
-
-.button:disabled {
-  color: #E1E1E1;
-  background-color: #C1C1C1;;
-}
-
 /* product-cards */
 
 .category-list {
   display: flex;
   justify-content: space-between;
-  
   flex-wrap: wrap;
-
   margin-top: 30px;
   margin-bottom: 0;
 }
@@ -374,6 +392,7 @@ opacity: 0.5;
   position: relative;
   width: 280px;
   min-height: 270px;
+  
 }
 
 .category-product__bg-apparel {
@@ -381,7 +400,6 @@ opacity: 0.5;
   background-repeat: no-repeat;
   background-position: center center;
   background-blend-mode: multiply;
-  
 }
 
 .category-product__bg-holiday {
@@ -428,11 +446,6 @@ opacity: 0.5;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
-
-.category-products__link {
-  width: 100%;
-  height: 100%;
 
   font-family: 'Montserrat';
   font-weight: bold;
@@ -442,7 +455,20 @@ opacity: 0.5;
   text-transform: uppercase;
 
   color: #FFFFFF;
-  text-shadow: 0px 0px 40px rgba(147, 3, 3, 0.25);
+  text-shadow: 0px 0px 40px rgba(147, 3, 3, 0.25); 
+}
+
+.category-products__link {
+  width: 100%;
+  height: 100%;
+}
+
+.category-list__item:hover .category-products__text {
+  text-decoration: underline;
+}
+
+.category-list__item:active .category-products__text {
+  text-decoration: underline;
 }
 
 /* pagination */ 
