--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-.her-slider {
-  padding-bottom: 50px;
+.hero-slider {
+  padding-bottom: 10px;
 }
 
 .hero-slider__wrapper {
@@ -131,15 +131,13 @@
 }
 
 .category-title {
-  margin-bottom: 30;
+  margin-bottom: 20px;
 }
-
-
 
 .category-description {
   display: inline-flex;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .categoty-description__button {
@@ -155,6 +153,12 @@
   height: 37px;
   background-color: rgba(112, 187, 220, 0.2);
   border: none;
+  transition: opacity ease-in-out .5s;
+  cursor: pointer;
+}
+
+.arrow:hover {
+  opacity: .6;
 }
 
 .arrow_left {
@@ -193,7 +197,7 @@
   display: flex;
   justify-content: flex-start;
   width: 100%;
-  padding-top: 40px;
+  padding-top: 20px;
   padding-bottom: 50px;
 }
 
@@ -202,7 +206,7 @@
 }
 
 .services-wrapper {
-  padding: 30px 110px 60px 120px;
+  padding: 0px 110px 60px 120px;
 }
 
 .services-title {
@@ -217,10 +221,15 @@
   font-size: 26px;
   line-height: 32px;
   border: none;
-  padding: 0 0 22px;
+  margin-bottom: 22px;
   cursor: pointer;
 
   background-color: #FFFFFF;
+  transition: opacity ease-in-out .5s;
+}
+
+.services-button:hover {
+  opacity: .6;
 }
 
 .services-button_active::before {
@@ -230,7 +239,7 @@
   height: 55px;
   background: rgba(112, 187, 220, 0.2);
   left: -60px;
-  bottom: 10px;
+  bottom: -10px;
 }
 
 .services-btn__learn {
@@ -246,10 +255,17 @@
   margin: 0;
 }
 
+.partner-list__item {
+  transition: opacity ease-in-out .5s;
+}
+
+.partner-list__item:hover {
+  opacity: .6;
+}
 /* articles */
 
 .block-article {
-  padding-top: 20px;
+  padding-top: 10px;
   padding-bottom: 87px;
   margin-bottom: 60px;
   display: flex;
@@ -337,14 +353,23 @@
 
 .form-close {
   position: absolute;
-  top: -5px;
-  right: -30px;
-  font-size: 24px;
+  top: -15px;
+  right: -35px;
+  font-size: 40px;
   color: #FFFFFF;
   
   border: none;
   background-color: transparent;
   transform: rotate(45deg);
   cursor: pointer;
+  transition: opacity ease-in-out .5s;
+}
+
+.form-close:hover {
+  opacity: .5;
+}
+
+.form-close:active {
+  opacity: .3;
 }
 
