--- a/pages/blog/style.css
+++ b/pages/blog/style.css
@@ -2,6 +2,7 @@
   font-family: Roboto;
   font-size: 16px;
   line-height: 19px;
+  margin: 20px 0 5px;
 
   color: #818181;
 }
@@ -14,12 +15,14 @@
   font-family: '0Montserrat', sans-serif;
   font-weight: bold;
   font-size: 24px;
-  line-height: 31px
+  line-height: 31px;
+  margin: 5px 0 5px;
 }
 
 .blog-post__decription {
   font-size: 18px;
   line-height: 25px;
+  margin-top: 10px;
 }
 
 .blog-articles {
@@ -34,6 +37,9 @@
   display: flex;
   flex-direction: column;
   width: 380px;
-  padding: 20px;
+  padding: 20px 0;
+}
 
+.blog-post__card:hover .blog-post__title {
+  text-decoration: underline;
 }
