--- a/pages/contact-us/style.css
+++ b/pages/contact-us/style.css
@@ -7,12 +7,17 @@
   justify-content: space-between;
 }
 
+.contact-us__text {
+  margin-top: 0;
+}
+
 .contact-us__upper-text {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   font-size: 26px;
   line-height: 34px;
   text-transform: uppercase;
+  margin-top: 20px;
 
   color: #C29974;
 }
