--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@
 .hero-slider__item::before {
   content: "";
   position: absolute;
-  height: 80%;
+  height: 82%;
   width: 100%;
-  top: 20%;
+  top: 18%;
   background-color: #EEE4DB;
   z-index: -10;
 }
@@ -48,6 +48,7 @@
 
 .poster {
   max-width: 100%;
+  height: 461px;
 }
 
 .hero-slider__number {
